# thermal_state_prep

./: .gitignore  Untitled-2.nb  Untitled-5.nb  bib.bib  extended_abstract.aux  extended_abstract.bbl  extended_abstract.blg  extended_abstract.fdb_latexmk  extended_abstract.fls  extended_abstract.out  extended_abstract.tex  h2_chain_2.txt  h2_chain_3.txt  junk.tex  main.bcf  main.out  main.synctex(busy)  main.tex  main.toc
numerics/: Cargo.toml  alpha_analysis.py  basic.py  build.rs  harmonics.py  march_16_results.txt  qhmc.py
numerics/analysis/: fixed_epsilon.ipynb  single_qubit.ipynb  single_shot.py  single_shot_notebook.ipynb  trace_dist_reduction.py
numerics/data/: epsilon_fitting  epsilon_fitting_2  epsilon_fitting_3  epsilon_fitting_4  epsilon_fitting_4.json  epsilon_fitting_5  error_vs_interaction  error_vs_interaction_fixed_time  error_vs_interaction_fixed_time_2  error_vs_interaction_h2_chain_1.json  error_vs_interaction_h3_chain_1.json  error_vs_interaction_h3_chain_2.json  error_vs_interaction_h3_chain_3.json  error_vs_interaction_h_chain  h_chain_3_with_noise_1  h_chain_3_with_noise_2  h_chain_with_noise_1  h_chain_with_noise_2  no_mpemba.txt  sho_with_noise_1  t_vs_tot_time.json  tot_time_vs_t.json
numerics/data/alpha_decay/: 1  2  3  4  5  6
numerics/data/fixed_epsilon_harmonic/: alpha.json  alpha_conf.json  beta_env.json  (+4 more)
numerics/src/: channel.rs  cooling_schedule.rs  fixed_epsilon.rs  fixed_num_steps.rs  fixed_points.rs  interaction_generator.rs  lib.rs  main.rs  multi_shot_dist.rs  new_channel.rs  quantities.rs  single_qubit_dist.rs  single_shot_dist.rs  thermalization.rs  thermometry.rs
(+33 files in other folders)
