[package]
name = "numerics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.16.0", features = ["blas"]}
blas = {version = "0.20"}
blas-src = {version = "0.8.0", features=["accelerate"]}
num-complex = "*"
# ndarray-linalg = {version = "0.16.0", features=[blas]}
expm = "0.1.1"