[package]
name = "numerics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["blas"]}
blas = {version = "0.20"}
blas-src = {version = "0.8.0", features=["accelerate"]}
num-complex = "*"
# ndarray-linalg = {version = "*", path = "/Users/matt/repos/ndarray-linalg/ndarray-linalg"}
ndarray-linalg = {version = "*", git = "https://github.com/matthagan15/ndarray-linalg", branch="stable_expm"}
rayon = "1.5.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
clap = { version = "4.3.11", features = ["derive"] }
